--- a/layouts/index.html
+++ b/layouts/index.html
@@ -84,6 +84,35 @@
 {{ end }}
 <!-- /about us -->
 
+<!-- blog -->
+{{ if $data.homepage.blog.enable }}
+<section class="section">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="d-flex align-items-center section-title justify-content-between">
+          <h2 class="mb-0 text-nowrap mr-3">{{ $data.homepage.news.title }}</h2>
+          <div class="border-top w-100 border-primary d-none d-sm-block"></div>
+          <div>
+            <a href="{{ `news` | relLangURL }}" class="btn btn-sm btn-outline-primary ml-sm-3 d-none d-sm-block">{{ i18n "see_all" }}</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <!-- blog post -->
+      {{ range first 3 (where site.RegularPages "Type" "post")}}
+      <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
+        {{ .Render "post" }}
+      </article>
+      {{ end }}
+    </div>
+  </div>
+</section>
+{{ end }}
+<!-- /blog -->
+
+
 <!-- courses -->
 {{ if $data.homepage.course.enable }}
 <section class="section-sm">
@@ -182,26 +211,6 @@
 {{ end }}
 <!-- /events -->
 
-<!-- blog -->
-{{ if $data.homepage.blog.enable }}
-<section class="section">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h2 class="section-title">{{ $data.homepage.blog.title }}</h2>
-      </div>
-    </div>
-    <div class="row justify-content-center">
-      <!-- blog post -->
-      {{ range first 3 (where site.RegularPages "Type" "post")}}
-      <article class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
-        {{ .Render "post" }}
-      </article>
-      {{ end }}
-    </div>
-  </div>
-</section>
-{{ end }}
-<!-- /blog -->
+
 
 {{ end }}
