Update & create deployment

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
     <div class="hero-slider">
       <!-- slider item -->
       {{ range .slider_item }}
-      <div class="hero-slider-item">
+      <div class="hero-slider-item bg-cover">
         <div class="row">
           <div class="col-md-8">
             <h1 class="text-white" data-animation-out="fadeOut{{.animation_out | title }}" data-delay-out="5" data-duration-in=".3"
@@ -210,7 +210,4 @@
 </section>
 {{ end }}
 <!-- /events -->
-
-
-
 {{ end }}
