--- a/layouts/undergraduate-program/list.html
+++ b/layouts/undergraduate-program/list.html
@@ -1,7 +1,14 @@
 {{ define "main" }}
-
 <!-- courses -->
 <section class="section">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="text-center">
+        {{ .Content }}
+      </div>
+    </div>
+  </div>
+  <br>
   <div class="container">
     <!-- course list -->
     <div class="row justify-content-center">
