--- a/layouts/graduate-program/list.html
+++ b/layouts/graduate-program/list.html
@@ -6,7 +6,7 @@
     <!-- course list -->
     <div class="row justify-content-center">
       <!-- course item -->
-      {{ range first 3 (where site.RegularPages "Type" "graduate-program")}}
+      {{ range .Data.Pages }}
       <div class="col-lg-4 col-sm-6 mb-5">
         {{ .Render "course" }}
       </div>
