--- a/layouts/abet/list.html
+++ b/layouts/abet/list.html
@@ -23,7 +23,7 @@
     </div>
     <div class="row justify-content-center">
       <!-- teacher -->
-      {{ range first 3 (where site.RegularPages "Type" "abet-accreditation")}}
+      {{ range first 3 (where site.RegularPages "Type" "abet")}}
       <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0">
         {{ .Render "course" }}
       </div>
