--- a/layouts/faculty/single.html
+++ b/layouts/faculty/single.html
@@ -9,45 +9,48 @@
       </div>
       <div class="col-md-6 mb-5">
         <h3>{{ .Title }}</h3>
-        <!-- <h6 class="text-color">{{ .Params.Course }}</h6> -->
-        <p class="mb-5">{{ .Params.Bio | markdownify }}</p>
-        <div class="row">
-          <div class="col-md-6 mb-5 mb-md-0">
-            <h4 class="mb-4">{{ i18n "contact_info" | upper}}:</h4>
+        <h6 class="text-color">{{ .Params.Bio | markdownify }}</h6>
+        <ul class="list-unstyled">
+          {{ range .Params.Interest }}
+          <li class="mb-2">{{ . | title }}</li>
+          {{ end }}
+        </ul>
+        <div class="row mt-4">
+          <div class="col-md-8 mb-8 mb-md-0 mt-4">
+            <h6 class="mb-2">{{ i18n "contact_info" | upper}}:</h6>
+            
             <ul class="list-unstyled">
               {{ range .Params.Contact }}
-              <li class="mb-3"><a class="text-color" href="{{ .link | safeURL }}"><i class="{{ .icon }} mr-2"></i>{{ .name }}</a></li>
+              <li class="mb-2"><a class="text-color" href="{{ .link | safeURL }}"><i class="{{ .icon }} mr-2"></i>{{ .name }}</a></li>
               {{ end }}
             </ul>
-          </div>
-          <div class="col-md-6">
-            <h4 class="mb-4">{{ i18n "interest" | upper }}</h4>
-            <ul class="list-unstyled">
-              {{ range .Params.Interest }}
-              <li class="mb-3">{{ . | title }}</li>
-              {{ end }}
-            </ul>
+
           </div>
         </div>
       </div>
-      <div class="col-12 content">
+      <div class="col-12 content text-justify">
         {{ .Content }}
       </div>
     </div>
-
-    <div class="row">
-      <div class="col-12">
-        <h4 class="mb-4">{{ i18n "courses" | upper}}</h4>
-      </div>
-      <!-- course item -->
-      {{ range where site.RegularPages "Params.teacher" .Title }}
-      <div class="col-lg-4 col-sm-6 mb-5">
-        {{ .Render "course"}}
-      </div>
-      {{ end }}
-    </div>
   </div>
 </section>
-<!-- /teacher details -->
+
+<section class="section">
+  {{ if .Params.in_the_news }}
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <h4 class="mb-4">{{ i18n "in_the_news" | upper}}</h4>
+      </div>
+      <!-- news item -->
+      {{ range where site.RegularPages "Params.related_people" "intersect" (.Title | slice) }}
+			<div class="col-lg-4 col-sm-6 mb-4">
+				{{ .Render "post" }}
+			</div>
+			{{ end }}
+    </div>
+  </div>
+  {{ end }}
+</section>
 
 {{ end }}
