--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,17 +7,15 @@
       <div class="row no-gutters align-items-center">
         <div class="col-lg-4 text-center text-lg-left">
           <ul class="list-inline">
-            {{ range site.Params.social }}
-            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="{{ .link | safeURL }}"><i class="{{ .icon }}"></i></a></li>
-            {{ end }}
+            <a class="text-color mr-3" href="{{ site.Params.uni_url }}" target="_blank"><strong>{{ site.Params.uni_name }}</strong></a></li>
           </ul>
         </div>
         <div class="col-lg-8 text-center text-lg-right">
           <ul class="list-inline">
             <li class="list-inline-item">
-              <a class="text-color mr-3" href="tel:{{ site.Params.mobile }}"><strong>{{ i18n "call" | upper }} : </strong> {{ site.Params.mobile }}</a></li>
+              <a class="text-color mr-3" href="tel:{{ site.Params.mobile }}"> {{ site.Params.mobile }}</a></li>
             <li class="list-inline-item">
-              <a class="text-color" href="mailto:{{ site.Params.email }}"><strong>{{ i18n "email" | upper }} : </strong> {{ site.Params.email }}</a></li>
+              <a class="text-color" href="mailto:{{ site.Params.email }}"> {{ site.Params.email }}</a></li>
           </ul>
         </div>
       </div>
