Update faculty info

--- a/layouts/faculty/single.html
+++ b/layouts/faculty/single.html
@@ -11,7 +11,7 @@
         <h3>{{ .Title }}</h3>
         <h6 class="text-color">{{ .Params.Bio | markdownify }}</h6>
         <ul class="list-unstyled">
-          {{ range .Params.Interest }}
+          {{ range .Params.education }}
           <li class="mb-2">{{ . | title }}</li>
           {{ end }}
         </ul>
